--- a/cmb2/css/attached-posts-admin.css
+++ b/cmb2/css/attached-posts-admin.css
@@ -65,6 +65,7 @@
 	margin: 0;
 	padding: 10px 40px 10px 10px;
 	position: relative;
+    height: 50px;
 }
 
 .cmb-type-custom-attached-posts .connected li.odd {
